Fix background image, fix text wrap
Fixed the background image, so it covers the entire page at any screen size.
The win message was covering itself on smaller screen sizes, because the text
was too long, I fixed it by changing the line-height and the margins.

[Ticket: X]

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-    background: url(https://images.unsplash.com/photo-1533659124865-d6072dc035e1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80) no-repeat;
+    background: url(https://images.unsplash.com/photo-1533659124865-d6072dc035e1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80) no-repeat center center fixed;
     background-size:cover;
     color: white;
 }
@@ -14,6 +14,11 @@ h1, h2, p{
     font-size: 18px;
 }
 
+.roundResults p {
+    overflow-wrap: anywhere;
+    line-height: 19px;
+    margin: 5px;
+}
 #playto {
     border-radius: 5px;
     padding: 3px;
@@ -39,7 +44,9 @@ h1, h2, p{
 
 }
 
-
+.btnsDiv {
+    margin-bottom: 10px;
+}
 
 .paperBtn, .rockBtn, .scissorBtn {
     width: 150px;
@@ -57,7 +64,7 @@ h1, h2, p{
     background-size: contain;
 }
 
-@media (max-width: 450px) {
+@media (max-width: 505px) {
     .paperBtn, .rockBtn, .scissorBtn {
         width: 100px;
         height: 150px;
